<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_marker_tutorials</name>
  <version>0.0.1</version>
  <description>A package for interactive marker tutorials in ROS 2</description>
  <maintainer email="keshari.ravi2086@gmail.com">ravik</maintainer>
  <license>Apache-2.0</license>


  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Build and runtime dependencies -->
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz_common</depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Plugin description file -->
    <plugin>basic_controls.xml</plugin>
  </export>
</package>